// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cell align 1`] = `
<styled.div
  align="top"
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  vertical={false}
>
  test
</styled.div>
`;

exports[`cell auto layout with margin gutter 1`] = `
<styled.div
  cellType="auto"
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  gutterType="margin"
  vertical={false}
>
  test
</styled.div>
`;

exports[`cell auto layout with padding gutter 1`] = `
<styled.div
  cellType="auto"
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  gutterType="padding"
  vertical={false}
>
  test
</styled.div>
`;

exports[`cell base layout 1`] = `
<styled.div
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  vertical={false}
>
  test
</styled.div>
`;

exports[`cell offset 1`] = `
<styled.div
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  smallOffset={1}
  vertical={false}
>
  test
</styled.div>
`;

exports[`cell shrink layout 1`] = `
<styled.div
  cellType="shrink"
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  vertical={false}
>
  test
</styled.div>
`;

exports[`cell with 6 small layout 1`] = `
<styled.div
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  small={6}
  vertical={false}
>
  test
</styled.div>
`;
